Creation of share button and sharing link button component, importation of SVG icons

--- a/src/ideapici/src/app/app.component.html
+++ b/src/ideapici/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<router-outlet>
+
+<app-share-button></app-share-button>
+
+<app-sharing-link-button></app-sharing-link-button>
+
+</router-outlet>
