Add parameters for sharing link buttons (linkToSVG and description)

--- a/src/ideapici/src/app/sharing-link-button/sharing-link-button.component.html
+++ b/src/ideapici/src/app/sharing-link-button/sharing-link-button.component.html
@@ -1,6 +1,6 @@
 <section>
     <figure>
-        <img id="icon" src="../../../assets/logos/icons/link.svg">
-        <h1>Lien vers cette page</h1>
+        <img id="icon" [src]="linkToSVG">
+        <h1> {{ description }} </h1>
     </figure>
 </section>
