search for router problem

--- a/src/ideapici/src/app/pages/questions-page/questions-page.component.html
+++ b/src/ideapici/src/app/pages/questions-page/questions-page.component.html
@@ -1,1 +1,7 @@
-<p>questions-page works!</p>
+<header>
+    <p>header still in construction</p>
+</header>
+
+<section>
+    <a [routerLink]='/setup-choice'>Passer aux config que je suggère</a>
+</section>
