Resolve routing problem
le composant été importé mais pas déclarer dans app.module.ts

--- a/src/ideapici/src/app/pages/questions-page/questions-page.component.html
+++ b/src/ideapici/src/app/pages/questions-page/questions-page.component.html
@@ -3,5 +3,5 @@
 </header>
 
 <section>
-    <a [routerLink]='/setup-choice'>Passer aux config que je suggère</a>
+    <a [routerLink]="['/setup-choice']" >Passer aux config que je suggère</a>
 </section>
