changes on css and html of questions page, set the background color in style.css, add tow component

--- a/src/ideapici/src/app/pages/questions-page/questions-page.component.html
+++ b/src/ideapici/src/app/pages/questions-page/questions-page.component.html
@@ -2,6 +2,14 @@
     <p>header still in construction</p>
 </header>
 
-<section>
+<section id="config_link">
     <a [routerLink]="['/setup-choice']" >Passer aux config que je suggère</a>
+</section>
+
+<section>
+
+</section>
+
+<section>
+
 </section>
