add icon people-inscription-add, the main icon button has now content, redirection and svg to display as configurable by caller

--- a/src/ideapici/src/app/components/main-icon-button/main-icon-button.component.html
+++ b/src/ideapici/src/app/components/main-icon-button/main-icon-button.component.html
@@ -1,6 +1,6 @@
-<button (click)="redirect('toto')" class="main-button-iconified">
+<button (click)="redirect(destination)" class="main-button-iconified">
     <p>
-        Click
+        {{textToDisplay}}
     </p>
-    <app-people-profile-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-profile-icon>
+    <ng-content></ng-content> <!-- Content should be an image, but other content can be displayed -->
 </button>
