--- a/src/ideapici/src/app/pages/not-found-page/not-found-page.component.html
+++ b/src/ideapici/src/app/pages/not-found-page/not-found-page.component.html
@@ -1,2 +1,3 @@
 <p>not-found-page works!</p>
-<app-main-icon-button></app-main-icon-button>
+<app-main-icon-button [textToDisplay]="'Root element'"><app-people-incription-add-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-incription-add-icon></app-main-icon-button>
+<!-- <app-people-profile-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-profile-icon> -->
