--- a/src/ideapici/src/app/components/main-icon-button/main-icon-button.component.css
+++ b/src/ideapici/src/app/components/main-icon-button/main-icon-button.component.css
@@ -1,10 +1,12 @@
 .main-button-iconified {
     display: flex;
     flex-flow: row nowrap; /* don't want to have icon above text */
-    row-gap: 16px;
+    column-gap: 16px;
     padding: 8px 40px;
     justify-content: center;
     align-items: center;
+
+    border: none;
 
     background-color: var(--secondary-color);
     border-radius: 16px;
@@ -15,4 +17,13 @@
     color: var(--primary-color);
     margin: 0;
     padding: 0;
+}
+
+.main-button-iconified:hover p {
+    color: var(--interactible-color);
+}
+
+.main-button-iconified:hover * svg .modifiable-color-path {
+    fill: var(--interactible-color);
+    
 }
