creation of header, and encapsulation of buttons inside it. Text of buttons appears now bigger. Start to add HostListener on button to change svg class. Body has padding and is limited to 1980px for wider screens

--- a/src/ideapici/src/app/components/main-icon-button/main-icon-button.component.css
+++ b/src/ideapici/src/app/components/main-icon-button/main-icon-button.component.css
@@ -21,9 +21,7 @@
 
 .main-button-iconified:hover p {
     color: var(--interactible-color);
-}
-
-.main-button-iconified:hover * svg .modifiable-color-path {
-    fill: var(--interactible-color);
-    
+    transform: scale(1.1);
+    font-weight: bold;
+    transition: all 200ms ease-in-out;
 }
