--- a/src/ideapici/src/app/pages/not-found-page/not-found-page.component.html
+++ b/src/ideapici/src/app/pages/not-found-page/not-found-page.component.html
@@ -1,7 +1,1 @@
-<app-main-icon-button [textToDisplay]="'Connexion'">
-    <app-people-profile-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-profile-icon>
-</app-main-icon-button>
-<br /><br />
-<app-main-icon-button [textToDisplay]="'Inscription'">
-    <app-people-incription-add-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-incription-add-icon>
-</app-main-icon-button>
+<app-header></app-header>
