add SvgComponent to have universal inheritence for all svgComponent, now color of svg is changed when hovering

--- a/src/ideapici/src/app/components/header/header.component.html
+++ b/src/ideapici/src/app/components/header/header.component.html
@@ -15,11 +15,11 @@
     </div>
     <div class="connexion-part">
         <app-main-icon-button [textToDisplay]="'Connexion'">
-            <app-people-profile-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-profile-icon>
+            <app-people-profile-icon #svg_to_print [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-profile-icon>
         </app-main-icon-button>
         <br /><br />
         <app-main-icon-button [textToDisplay]="'Inscription'">
-            <app-people-incription-add-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-incription-add-icon>
+            <app-people-incription-add-icon #svg_to_print [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-incription-add-icon>
         </app-main-icon-button>
     </div>
 </header>
