add part of titled icon with the svg component ideapici logo, main icon button are now scaled to 1.05 when they are hovered

--- a/src/ideapici/src/app/components/header/header.component.html
+++ b/src/ideapici/src/app/components/header/header.component.html
@@ -1,7 +1,5 @@
 <header>
-    <div class="logo-part">
-        Logo Ideapici
-    </div>
+    <app-titled-icon-ideapici></app-titled-icon-ideapici>
     <div class="central-part">
         <nav>
             <!-- TODO : add routerLink directive -->
