add style for larger link and fix layout for header and subpart titled icon

--- a/src/ideapici/src/app/components/header/header.component.css
+++ b/src/ideapici/src/app/components/header/header.component.css
@@ -31,7 +31,7 @@ header .central-part {
 }
 
 .central-part p {
-    font: var(--text-larger-font);
+    font: var(--text-title-font);
 }
 
 header .connexion-part {
