--- a/src/ideapici/src/app/components/header/header.component.html
+++ b/src/ideapici/src/app/components/header/header.component.html
@@ -3,9 +3,9 @@
     <div class="central-part">
         <nav>
             <!-- TODO : add routerLink directive -->
-            <a class="text-link">Commence avec moi</a>
-            <a class="text-link">Voit Mes PCs</a>
-            <a class="text-link">Je t'aides</a>
+            <a class="text-title-link">Débutes avec moi</a>
+            <a class="text-title-link">Viens voir mes PCs</a>
+            <a class="text-title-link">Je t'aide</a>
         </nav>
         <p>
             Easy peazy, easy PC! LA configuration pour TES besoins, grâce à moi!
