--- a/src/ideapici/src/app/components/titled-icon-ideapici/titled-icon-ideapici.component.css
+++ b/src/ideapici/src/app/components/titled-icon-ideapici/titled-icon-ideapici.component.css
@@ -3,10 +3,12 @@ div {
     flex-flow: row wrap;
     justify-content: flex-start;
     align-items: center;
-    gap: 8px;
+    column-gap: 16px;
+    row-gap: 2px;
     padding: 0;
 }
 
 div p {
     color: var(--secondary-color);
+    margin: 0;
 }
