--- a/src/ideapici/src/app/components/titled-icon-ideapici/titled-icon-ideapici.component.css
+++ b/src/ideapici/src/app/components/titled-icon-ideapici/titled-icon-ideapici.component.css
@@ -3,6 +3,7 @@ div {
     flex-flow: row wrap;
     justify-content: flex-start;
     align-items: center;
+    align-content: center;
     column-gap: 16px;
     row-gap: 2px;
     padding: 0;
