creation of performance-info component which is in performance-card component

--- a/src/ideapici/src/app/app.component.html
+++ b/src/ideapici/src/app/app.component.html
@@ -2,6 +2,8 @@
 
 <app-share-button></app-share-button>
 
-<app-sharing-link-button></app-sharing-link-button>
+<app-performance-card></app-performance-card>
+
+
 
 </router-outlet>
