Integration du pc.json dans la page setupChoice

--- a/src/ideapici/src/app/pages/setup-choice/setup-choice.component.html
+++ b/src/ideapici/src/app/pages/setup-choice/setup-choice.component.html
@@ -7,7 +7,7 @@
                 <div>
                     <app-textcombobox Text="Preference CPU" [option]="['Intel', 'AMDé' ]"></app-textcombobox>
                     <app-textcombobox Text="Preference GPU" [option]="['NVIDAI', 'AMDé' ]"></app-textcombobox>
-                    <app-text-slider Title="Budget" min="0" max="2500"></app-text-slider>
+                    <app-text-slider Title="Budget" min="0" max="2500" sliderValue="10"></app-text-slider>
                 </div>
             <p>Jeux vidéo</p>
                 <div>
