add animation flickers-path-svg in global styles, add app icon component, with filled stroke. Add animation on this logo. Add warn in html part of SVGComponent, as it is not intended to be used directly

--- a/src/ideapici/src/app/components/icons/ideapici-logo-svg-wired/ideapici-logo-svg-wired.component.css
+++ b/src/ideapici/src/app/components/icons/ideapici-logo-svg-wired/ideapici-logo-svg-wired.component.css
@@ -10,6 +10,6 @@ svg:hover {
 
 svg:hover .movable-part {
     /* TODO : make movable part moving like lighting up */
-    fill: var(--interactible-color);
-    transition: all 400ms ease-in-out;
+    animation: flickers-path-svg 600ms linear;
+    stroke: var(--interactible-color)
 }
