--- a/src/ideapici/src/app/components/icons/svgcomponent/svgcomponent.component.html
+++ b/src/ideapici/src/app/components/icons/svgcomponent/svgcomponent.component.html
@@ -1,1 +1,3 @@
-<p>svgcomponent works!</p>
+<p>
+    This component is not a displayable one, his only purpose is to be extended to provide an unified handler with polymorphysm, using ContentChild or ViewChild decorators
+</p>
