--- a/src/ideapici/src/app/components/titled-icon-ideapici/titled-icon-ideapici.component.html
+++ b/src/ideapici/src/app/components/titled-icon-ideapici/titled-icon-ideapici.component.html
@@ -1,4 +1,4 @@
 <div>
-    <a [routerLink]="'/index'"><app-ideapici-logo-svg [fillColor]="rootStyle.getPropertyValue('--secondary-color')"></app-ideapici-logo-svg></a>
+    <a [routerLink]="'/index'"><app-ideapici-logo-svg-wired [fillColor]="rootStyle.getPropertyValue('--secondary-color')"></app-ideapici-logo-svg-wired></a>
     <p class="major-title">Ideapici</p>
 </div>
