Display ALL computers from the json folder in setup-choise page

--- a/src/ideapici/src/app/components/pc-card/pc-card.component.html
+++ b/src/ideapici/src/app/components/pc-card/pc-card.component.html
@@ -5,7 +5,7 @@
             <p>En bref:</p>
             <p>CPU: {{cpu}}</p>
             <p>GPU: {{gpu}}</p>
-            <p>RAM: {{ram}}</p>
+            <p>RAM: {{ram}}Go</p>
         </div>
     </div>
     <div class="card-foot">
