--- a/src/ideapici/src/app/pages/not-found-page/not-found-page.component.html
+++ b/src/ideapici/src/app/pages/not-found-page/not-found-page.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<section class="page_not_found_flex">
+<section class="page_not_found_flex page-content">
     <h1 class="page-title">Erreur 404</h1>
     <figure>
         <img id="page_not_found-img" src="../../../assets/images/page_not_found/lost_path.png" alt="un voyageur cherchant son chemin">
