add connxion interactible part for hero, add style on content of landing page to appear cut down to a part when not displayed in focus

--- a/src/ideapici/src/app/components/header-hero/header-hero.component.html
+++ b/src/ideapici/src/app/components/header-hero/header-hero.component.html
@@ -1,5 +1,5 @@
 <header>
-    <app-ideapici-logo-svg [fillColor]="rootStyle.getPropertyValue('--secondary-color')"></app-ideapici-logo-svg>
+    <app-ideapici-logo-svg [fillColor]="rootStyle.getPropertyValue('--secondary-color')" height="130px" width="auto"></app-ideapici-logo-svg>
     <div class="central-part">
         <p>
             Ideapici
@@ -8,7 +8,5 @@
             Easy peazy, easy PC!
         </p>
     </div>
-    <div class="connexion-part">
-        Connexion
-    </div>
+    <app-connexion-hero-button class="connexion-part"></app-connexion-hero-button>
 </header>
