--- a/src/ideapici/src/app/components/header/header.component.html
+++ b/src/ideapici/src/app/components/header/header.component.html
@@ -13,10 +13,10 @@
     </div>
     <div class="connexion-part">
         <app-main-icon-button [textToDisplay]="'Connexion'">
-            <app-people-profile-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-profile-icon>
+            <app-people-profile-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')" width="40px" height="40px"></app-people-profile-icon>
         </app-main-icon-button>
         <app-main-icon-button [textToDisplay]="'Inscription'">
-            <app-people-incription-add-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')"></app-people-incription-add-icon>
+            <app-people-incription-add-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')" width="40px" height="40px"></app-people-incription-add-icon>
         </app-main-icon-button>
     </div>
 </header>
