--- a/src/ideapici/src/app/components/header/header.component.css
+++ b/src/ideapici/src/app/components/header/header.component.css
@@ -4,7 +4,7 @@ header {
     justify-content: space-between;
     align-items: center;
 
-
+    margin-top: 24px;
     padding: 0;
     width:100%;
 }
