--- a/src/ideapici/src/app/components/icons/ideapici-logo-svg-wired/ideapici-logo-svg-wired.component.html
+++ b/src/ideapici/src/app/components/icons/ideapici-logo-svg-wired/ideapici-logo-svg-wired.component.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 286.58824 493.5">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 286.58824 493.5" [attr.height]="height" [attr.width]="width">
     <g data-name="Calque 2">
         <g data-name="Calque 1">
             <path class="modifiable-color-path" [attr.fill]="fillColor"
