--- a/src/ideapici/src/app/pages/landing-page/landing-page.component.css
+++ b/src/ideapici/src/app/pages/landing-page/landing-page.component.css
@@ -6,18 +6,54 @@
     height: 100%;
 }
 
-.page-content, .header-hero {
+.header-hero {
     flex-grow: 1;
 }
 
 .page-hero {
-    flex-grow: 2;
+    padding-top: 20px;
+    flex-grow: 4;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .page-hero app-hero-button {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
+    align-items: flex-start;
+}
+
+.page-content {
+    padding: 0;
+    position: absolute;
+    z-index: 3;
+    left: 8px;
+    right: 8px;
+    bottom: 0px;
+    width: auto;
+    background-color: var(--primary-color);
+    border-radius: 32px 32px 0 0;
+    border-width: 2px 2px 0px 2px;
+    border-style: solid;
+    border-color: var(--secondary-color);
+    box-shadow: 0 -1px 8px var(--secondary-color);
+}
+
+.scrollable-content {
+    width: 100%;
+    overflow-y: hidden;
+    height: 6rem;
+    
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
     align-items: center;
-    height: 100%;
+    row-gap: 48px;
+}
+
+.page-content .scrollable-content p.content-title {
+    font: var(--title-minor-font);
 }
