--- a/src/ideapici/src/app/pages/landing-page/landing-page.component.html
+++ b/src/ideapici/src/app/pages/landing-page/landing-page.component.html
@@ -4,6 +4,13 @@
     <app-hero-button destination="setupChoice" textToDisplay="Pensons ensemble à ton nouveau PC!"></app-hero-button>
 </section>
 
-<section class="page-content">
-    content
+<section class="page-content" (click)="expendContent()"> <!-- $ before var indicates that var is observable (based on conception pattern Observer) -->
+    <div class="scrollable-content">
+        <p class="content-title">Je peux t’aider à créer une configuration PC, ou te suggérer un PC portable!</p>
+        <p>Je peux t’aider à créer une configuration PC, ou te suggérer un PC portable!</p>
+        <p>Je peux t’aider à créer une configuration PC, ou te suggérer un PC portable!</p>
+        <p>Je peux t’aider à créer une configuration PC, ou te suggérer un PC portable!</p>
+        <p>Je peux t’aider à créer une configuration PC, ou te suggérer un PC portable!</p>
+    </div>
+    
 </section>
