--- a/src/ideapici/src/app/components/UI/connexion-hero-button/connexion-hero-button.component.html
+++ b/src/ideapici/src/app/components/UI/connexion-hero-button/connexion-hero-button.component.html
@@ -1,7 +1,10 @@
-<div class="connexion-interactible">
-    <p>Connexion</p>
+<div [ngClass]="elementsVisible ? 'connexion-interactible-expended' : 'connexion-interactible-folded'" class="connexion-interactible" (click) = "revealContent()">
+    <p class="interactible-title">Connexion</p>
+
     <ng-content></ng-content>
-    <form>
+
+    <p [ngClass]="elementsVisible ? 'go-inscription' : 'not-displayed'">S'inscrire</p>
+    <form [ngClass]="elementsVisible ? 'connexion-form' : 'not-displayed'">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" required>
         <label for="password">Password</label>
