--- a/src/ideapici/src/app/components/header-hero/header-hero.component.html
+++ b/src/ideapici/src/app/components/header-hero/header-hero.component.html
@@ -8,5 +8,7 @@
             Easy peazy, easy PC!
         </p>
     </div>
-    <app-connexion-hero-button class="connexion-part"></app-connexion-hero-button>
+    <app-connexion-hero-button class="connexion-part">
+        <app-people-profile-icon [fillColor]="rootStyle.getPropertyValue('--primary-color')" width="64px" height="64px"></app-people-profile-icon>
+    </app-connexion-hero-button>
 </header>
