--- a/src/ideapici/src/styles.css
+++ b/src/ideapici/src/styles.css
@@ -72,6 +72,13 @@ body {
     transition: all 250ms ease-in-out;
 }
 
+.connexion-interactible form input[type='text'], .connexion-interactible form input[type='password'] {
+    font: var(--text-font);
+    border-radius: 4px;
+    box-shadow: 0px 2px var(--primary-color);
+    border: none;
+}
+
 @keyframes flickers-path-svg {
 	0% {
 		stroke: var(--interactible-color);
