modify p inscription to link a

--- a/src/ideapici/src/app/components/UI/connexion-hero-button/connexion-hero-button.component.css
+++ b/src/ideapici/src/app/components/UI/connexion-hero-button/connexion-hero-button.component.css
@@ -40,7 +40,7 @@
     margin: 0;
 }
 
-.connexion-interactible p.go-inscription {
+.connexion-interactible a.go-inscription {
     font: var(--text-font);
     margin: 0;
     color: var(--interactible-color);
