--- a/src/ideapici/src/app/components/UI/connexion-hero-button/connexion-hero-button.component.html
+++ b/src/ideapici/src/app/components/UI/connexion-hero-button/connexion-hero-button.component.html
@@ -3,11 +3,11 @@
 
     <ng-content></ng-content>
 
-    <p [ngClass]="elementsVisible ? 'go-inscription' : 'not-displayed'">S'inscrire</p>
+    <a routerLink="/inscription" [ngClass]="elementsVisible ? 'go-inscription' : 'not-displayed'">S'inscrire</a>
     <form [ngClass]="elementsVisible ? 'connexion-form' : 'not-displayed'">
-        <label for="username">Username</label>
+        <label for="username">Utilisateur</label>
         <input type="text" name="username" id="username" required>
-        <label for="password">Password</label>
+        <label for="password">Mot de passe</label>
         <input type="password" name="password" id="password" required>
     </form>
 </div>
