--- a/src/ideapici/src/app/pages/questions-page/questions-page.component.html
+++ b/src/ideapici/src/app/pages/questions-page/questions-page.component.html
@@ -6,8 +6,8 @@
     <a [routerLink]="['/setup-choice']" >Passer aux config que je suggère</a>
 </section>
 
-<section>
-
+<section class="cards">
+    <app-question-cards></app-question-cards>
 </section>
 
 <section>
