--- a/src/ideapici/src/app/pages/questions-page/questions-page.component.css
+++ b/src/ideapici/src/app/pages/questions-page/questions-page.component.css
@@ -1,3 +1,10 @@
+:host {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+}
+
 #config_link {
     display: flex;
     flex-direction: row;
@@ -6,4 +13,19 @@
 
 #config_link a {
     margin-right: 13rem;
+}
+
+.cards {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+app-question-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
 }
