following the changes request

--- a/src/ideapici/src/app/components/header/header.component.html
+++ b/src/ideapici/src/app/components/header/header.component.html
@@ -1,11 +1,12 @@
 <header>
     <app-titled-icon-ideapici></app-titled-icon-ideapici>
     <div class="central-part">
+        
         <nav>
             <!-- TODO : add routerLink directive -->
-            <a class="text-title-link">Débutes avec moi</a>
-            <a class="text-title-link">Viens voir mes PCs</a>
-            <a class="text-title-link">Je t'aide</a>
+            <a class="text-title-link" routerLink="/questions-page">Débutes avec moi</a>
+            <a class="text-title-link" routerLink="/visualize-pcs">Viens voir mes PCs</a>
+            <a class="text-title-link" routerLink="/learn">Je t'aide</a>
         </nav>
         <p>
             Easy peazy, easy PC! LA configuration pour TES besoins, grâce à moi!
