--- a/src/ideapici/src/app/pages/landing-page/landing-page.component.html
+++ b/src/ideapici/src/app/pages/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <app-header-hero class="header-hero"></app-header-hero>
 
 <section class="page-hero">
-    <app-hero-button destination="setupChoice" textToDisplay="Pensons ensemble à ton nouveau PC!"></app-hero-button>
+    <app-hero-button destination="questions-page" textToDisplay="Pensons ensemble à ton nouveau PC!"></app-hero-button>
 </section>
 
 <section class="page-content" (click)="expendContent()"> <!-- $ before var indicates that var is observable (based on conception pattern Observer) -->
