--- a/src/ideapici/src/app/pages/setup-choice/setup-choice.component.html
+++ b/src/ideapici/src/app/pages/setup-choice/setup-choice.component.html
@@ -1,8 +1,8 @@
 
 <app-header></app-header>
 <h2>Je te propose ces configs, clique sur ta favorite</h2>
-<div class="sujet">
-    <div class="filter">
+<div class="content">
+    <aside class="filter">
         <p>Filters</p>
             <div>
                 <app-textcombobox Text="Preference CPU" [option]="['Intel', 'AMDé' ]"></app-textcombobox>
@@ -10,12 +10,12 @@
                 <app-text-slider Title="Budget" min="0" max="2500" sliderValue="10"></app-text-slider>
             </div>
         <p>Jeux vidéo</p>
-            <div>
-                <app-textcombobox Text="Fortnite" [option]="['60 FPS', '144 FPS' ]"></app-textcombobox>
-                <app-textcombobox Text="Valorant" [option]="['60 FPS', '144 FPS' ]"></app-textcombobox>
-            </div>
-    </div>
-    <div class="setuplist" >
+        <div>
+            <app-textcombobox Text="Fortnite" [option]="['60 FPS', '144 FPS' ]"></app-textcombobox>
+            <app-textcombobox Text="Valorant" [option]="['60 FPS', '144 FPS' ]"></app-textcombobox>
+        </div>
+    </aside>
+    <article class="setuplist" >
         <app-pc-card *ngFor="let index of getIndicesArray(pcs.length)"
             [cpu]="pcs[index].system.cpu.nom"
             [gpu]="pcs[index].system.cg.marque"
@@ -23,7 +23,5 @@
             [brand]="pcs[index].marque"
             [cost]="pcs[index].prix">
         </app-pc-card>
-        </div>
-        
+    </article>
 </div>
-
