fix display of pc card in setup-choice

--- a/src/ideapici/src/app/components/pc-card/pc-card.component.html
+++ b/src/ideapici/src/app/components/pc-card/pc-card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-head">
-        <img src="../../../assets/images/pcgamer.png" alt="image de reference">
+        <img src="/assets/images/pcgamer.png" alt="image de reference">
         <div class="card-info">
             <p>En bref:</p>
             <p>CPU: {{cpu}}</p>
