--- a/src/ideapici/src/app/components/pc-card/pc-card.component.css
+++ b/src/ideapici/src/app/components/pc-card/pc-card.component.css
@@ -1,68 +1,49 @@
-img{
+img {
 
     object-fit: cover;
     width: 200px;
     height: 200px;
-    /* Inside auto layout */
-    flex: none;
-    order: 0;
-    flex-grow: 0;
 }
+
+p {
+    margin: 0;
+}
+
 .card{
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     align-items: flex-start;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 120%;
-    padding: 10px;
+
+    font: var(--text-larger-font);
+
+    padding: 16px;
     /* identical to box height, or 30px */
     text-align: center;
     color: #000000;
 
-    /* primary */
-    background: #78D6C6;
+    background: var(--primary-color);
     border: 1px solid #000000;
     border-radius: 16px;
-
-    /* Inside auto layout */
-    flex: none;
-    order: 0;
-    flex-grow: 0;
 }
 .card-head{
     display: flex;
-    flex-direction: row;
+    flex-flow: row nowrap;
     align-items: flex-start;
 
-    gap: 10px;
-
-    /* Inside auto layout */
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
+    gap: 8px;
 }
 
 .card-info{
     display: flex;
-    flex-direction: column;
+    flex-flow: column nowrap;
     align-items: flex-start;
-    /* Inside auto layout */
-    flex: none;
-    order: 1;
-    flex-grow: 0;
     
+    gap: 8px;
 }
 .card-foot{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    /* Inside auto layout */
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
+
+    gap: 16px;
 }
