--- a/src/ideapici/src/app/pages/setup-choice/setup-choice.component.css
+++ b/src/ideapici/src/app/pages/setup-choice/setup-choice.component.css
@@ -51,7 +51,7 @@ h2{
 .setuplist {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     padding: 10px;
     gap: 14px;
     max-width: 80%;
