--- a/src/ideapici/src/app/components/pc-card/pc-card.component.css
+++ b/src/ideapici/src/app/components/pc-card/pc-card.component.css
@@ -11,14 +11,13 @@ p {
 
 .card{
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     align-items: flex-start;
-
+    width: 400px;
     font: var(--text-larger-font);
 
     padding: 16px;
     /* identical to box height, or 30px */
-    text-align: center;
     color: #000000;
 
     background: var(--primary-color);
@@ -37,6 +36,7 @@ p {
     display: flex;
     flex-flow: column nowrap;
     align-items: flex-start;
+
     
     gap: 8px;
 }
