modification of the config visualisation page

--- a/src/ideapici/src/app/pages/config-visualisation-page/config-visualisation-page.component.html
+++ b/src/ideapici/src/app/pages/config-visualisation-page/config-visualisation-page.component.html
@@ -1,5 +1,9 @@
-<app-share-button></app-share-button>
+<header>
 
-<app-performance-card></app-performance-card>
+</header>
 
-<app-config-info></app-config-info>
+<section class="content">
+    <app-performance-card></app-performance-card>
+    <app-config-info></app-config-info>
+    <app-share-button></app-share-button>
+</section>
