change display block with fixed width and height, to flexbox layout

--- a/src/ideapici/src/app/components/config-info/config-info.component.css
+++ b/src/ideapici/src/app/components/config-info/config-info.component.css
@@ -1,6 +1,6 @@
 .config-info {
-    width: 18vw;
-    height: 22vw;
+    display: flex;
+    flex-flow: column nowrap;
     background-color: var(--primary-color);
-    border-radius: 5%;
+    border-radius: 16px;
 }
