--- a/src/ideapici/src/app/components/share-button/share-button.component.html
+++ b/src/ideapici/src/app/components/share-button/share-button.component.html
@@ -4,8 +4,8 @@
         <h1>Partage-la :</h1>
     </figure>
 
-    <app-sharing-link-button linkToSVG="../../../assets/logos/icons/link.svg" description="Lien vers la page"></app-sharing-link-button>
-    <app-sharing-link-button linkToSVG="../../../assets/logos/icons/SMS.svg" description="Partage par SMS"></app-sharing-link-button>
-    <app-sharing-link-button linkToSVG="../../../assets/logos/icons/email.svg" description="Partage par e-mail"></app-sharing-link-button>
-    <app-sharing-link-button linkToSVG="../../../assets/logos/icons/JSON.svg" description="Partage par JSON"></app-sharing-link-button>
+    <app-sharing-link-button linkToSVG="/assets/logos/icons/link.svg" description="Lien vers la page"></app-sharing-link-button>
+    <app-sharing-link-button linkToSVG="assets/logos/icons/SMS.svg" description="Partage par SMS"></app-sharing-link-button>
+    <app-sharing-link-button linkToSVG="/assets/logos/icons/email.svg" description="Partage par e-mail"></app-sharing-link-button>
+    <app-sharing-link-button linkToSVG="/assets/logos/icons/JSON.svg" description="Partage par JSON"></app-sharing-link-button>
 </section>
