--- a/src/ideapici/src/app/components/performance-card/performance-card.component.css
+++ b/src/ideapici/src/app/components/performance-card/performance-card.component.css
@@ -1,8 +1,9 @@
 .performance-card {
-    width: 14vw;
-    height: 22vw;
+    display: flex;
+    flex-flow: column wrap;
     background-color: var(--primary-color);
-    border-radius: 5%;
+    border-radius: 8px 8px 0 0;
+    
 }
 
 h1 {
